--- a/test.html
+++ b/test.html
@@ -7,24 +7,34 @@
 <body>
 
 <div id="test_code">
+<pre><code>
+  public class CloneTest {
+      @Test
+      public void test() throws CloneNotSupportedException {
 
-<div>@requires_authorization</div>
-<div>def somefunc(param1='', param2=0):</div>
-<div>&nbsp; &nbsp; r'''A docstring'''</div>
-<div>&nbsp; &nbsp; if param1 &gt; param2: # interesting</div>
-<div>&nbsp; &nbsp; &nbsp; &nbsp; print 'Gre\'ater'</div>
-<div>&nbsp; &nbsp; return (param2 - param1 + 1 + 0b10l) or None</div>
-<div><br></div>
-<div>class SomeClass:</div>
-<div>&nbsp; &nbsp; pass</div>
-<div><br></div>
-<div>&gt;&gt;&gt; message = '''interpreter</div>
-<div>... prompt'''</div>
+          Beta beta = new Beta(
+              "name",
+              Arrays.asList("a", "b", "c"),
+              new String[] {"secret"},
+              "bID",
+              new SimpleEntry<>(6, "bert")
+              );
 
+          Beta beta01 = (Beta) beta.clone();
+
+          Assert2.that()
+              .eq(beta.aName, beta01.aName)
+              .eq(beta.getaSecret(), beta01.getaSecret())
+              .eq(beta.getbEntry(), beta01.getbEntry());
+      }
+  }
+</code>
+</pre>
 </div>
+<input type="text" placeholder="Enter language (default auto)" id="language"/>
 <script>
 function convert() {
-
+debugger;
  	var selObj = window.getSelection();
     if (selObj.rangeCount == 0) {
       alert('Please select the code first');
@@ -35,6 +45,10 @@ function convert() {
     var newElement = document.createElement("div");
     var documentFragment = selRange.extractContents();
     var block = $('<div></div>').append(documentFragment);
+    var language = document.getElementById('language').value;
+    if (language != '') {
+      block.addClass(language);
+    }
     hljs.highlightBlock(block[0]);
     applyStylesheet(block);
     newElement.appendChild(block[0]);
@@ -108,7 +122,7 @@ elem.find('.diff .hljs-change')
 
 elem.find('.hljs-chunk')
   .css('color', '#aaa')
-	
+
 }
 
 </script>
